[package]
name = "spectrogram"
version = "0.1.0"
authors = ["Timothée Jourde <timjrd@netc.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustfft = "3.0.0"
js-sys = "0.3.31"

[dependencies.wasm-bindgen]
version = "0.2.54"
features = [
  "nightly"
]

[dependencies.web-sys]
version = "0.3.31"
features = [
  "console",
  "Window",
  "Document",
  "HtmlCollection",
  "Element",
  "HtmlCanvasElement",
  "ImageBitmapRenderingContext",
  "CanvasRenderingContext2d",
  "ImageData",
  "MediaDevices",
  "Navigator",
  "MediaStreamConstraints",
  "MediaStream",
  "AudioContext",
  "AudioBufferSourceNode",
  "ScriptProcessorNode",
  "AudioProcessingEvent",
  "AudioBuffer",
  "MediaStreamAudioSourceNode",
  "AudioNode",
]
